kubernetes/cluster/003_postgres_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres
  name: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres
