kubernetes/cluster/005_docker-demo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-demo
spec:
  selector:
    name: docker-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
