kubernetes/cluster/006_docker-demo_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-demo-ingress
spec:
  rules:
  - host: ${APPLICATION_FQDN}
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-demo
          servicePort: 8080
