kubernetes/cluster/006_docker-demo_istio_gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: docker-demo-ingress
spec:
  hosts:
    - ${APPLICATION_FQDN}
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: docker-demo
            port:
              number: 8080
